--- a/package.json
+++ b/package.json
@@ -3,22 +3,21 @@
   "version": "1.0.0",
   "description": "EC1 Gallery",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jriall/accordian-menu.git"
   },
   "author": "James Riall",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-cache": "^1.0.1",
     "gulp-cssnano": "^2.1.2",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-newer": "^1.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify-es": "^0.1.4",
@@ -26,8 +25,5 @@
     "gulp-useref": "^3.1.2",
     "node-sass": "^4.5.3",
     "run-sequence": "^2.2.0"
-  },
-  "devDependencies": {
-    "gulp-imagemin": "^4.1.0"
   }
 }
