--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
+    "eslint": "^4.15.0",
+    "eslint-config-google": "^0.9.1",
+    "google-closure-compiler-js": "^20180101.0.0",
     "gulp": "^3.9.1",
     "gulp-cache": "^1.0.1",
     "gulp-cssnano": "^2.1.2",
