--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "James Riall",
   "license": "ISC",
   "devDependencies": {
+    "ajv": "^6.0.1",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
     "eslint": "^4.15.0",
     "eslint-config-google": "^0.9.1",
-    "google-closure-compiler-js": "^20180101.0.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-cache": "^1.0.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-gh-pages": "^0.5.4",
@@ -28,5 +31,6 @@
     "gulp-useref": "^3.1.2",
     "node-sass": "^4.5.3",
     "run-sequence": "^2.2.0"
-  }
+  },
+  "dependencies": {}
 }
