--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "del": "^3.0.0",
     "eslint": "^4.15.0",
     "eslint-config-google": "^0.9.1",
+    "google-closure-linter": "^1.2.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-cache": "^1.0.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-gjslint": "^0.1.5",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-newer": "^1.3.0",
